# facebook-checker-gui

checker-gui-js/: package-lock.json  package.json  vite.config.js
checker-gui-js/src/: App.jsx  main.jsx
checker-gui-js/src-tauri/: Cargo.toml  tauri.conf.json
checker-gui-js/src-tauri/src/: main.rs
checker-gui-js/src/components/: FacebookList.jsx  Layout.jsx  RequireKey.jsx
checker-gui-js/src/components/FacebookInfo/: FacebookInfo.jsx  FacebookInfo.module.css
checker-gui-js/src/components/UI/: Loader.jsx
checker-gui-js/src/http/: api.js
checker-gui-js/src/pages/Account/: Account.jsx  Account.module.css
checker-gui-js/src/pages/Auth/: Auth.jsx  Auth.module.css
checker-gui-js/src/pages/Checker/: Checker.jsx  Checker.module.css
checker-gui-js/src/pages/Home/: Home.jsx  Home.module.css
checker-gui-js/src/pages/Settings/: Settings.jsx  Settings.module.css
checker-gui-js/src/service/: AuthService.js
checker-gui-js/src/store/: check.js  settings.js  store.js
checker-gui-js/src/styles/: styles.css
chekcer-gui/: package-lock.json  package.json  tsconfig.json
chekcer-gui/src/: App.tsx  index.css  index.tsx
chekcer-gui/src-tauri/: Cargo.toml  tauri.conf.json
chekcer-gui/src/components/Account/: Account.module.css  Account.tsx
chekcer-gui/src/components/Auth/: Auth.module.css  Auth.tsx
chekcer-gui/src/components/Checker/: Checker.tsx  (+1 more)
chekcer-gui/src/core/: FacebookAccount.ts  Key.ts  Settings.ts
chekcer-gui/src/http/: api.ts  response.ts
chekcer-gui/src/service/: AuthService.ts
chekcer-gui/src/store/: auth.ts  check.ts  settings.ts
(+18 files in other folders)
